--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'Android';
-    src: url(pacote/fontes/idroid.otf) format('opentype');
+    src: url(./estilo/fonte/idroid.otf) format('opentype');
 }
 
 
